--- a/bower.json
+++ b/bower.json
@@ -1,5 +1,7 @@
 {
   "dependencies": {
-    "requirejs": "~2.1.0"
+    "requirejs": "~2.1.0",
+    "jasmine": "~1.3.1",
+    "requirejs-domready": "~2.0.1"
   }
 }
