--- a/bower.json
+++ b/bower.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
-    "requirejs": "~2.1.0",
+    "requirejs": "~2.1.0"
+  },
+  "devDependencies": {
     "jasmine": "~1.3.1",
     "requirejs-domready": "~2.0.1"
   }
