--- a/bower.json
+++ b/bower.json
@@ -3,7 +3,6 @@
     "requirejs": "~2.1.0"
   },
   "devDependencies": {
-    "jasmine": "~1.3.1",
-    "requirejs-domready": "~2.0.1"
+    "jasmine": "~1.3.1"
   }
 }
